remove jump to country for now

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@ window.onload = function() {
 <a href="#KR_summary" aria-label="jump to South Korea COVID statistics">South Korea</a>
 
 <br><br>
-<form name="country_form" id="country_form" action="/view">
+<!-- <form name="country_form" id="country_form" action="/view">
     <label for="country_select">Jump to Country:</label>
     <select id="country_select" aria-controls="country" name="country_select">
       <option value="">Select a country&hellip;</option>
     </select>
     <input type="submit" value="Go">
-  </form>
+  </form> -->
 </nav>
 
 <main id="main" role="main">
