added plot previewing and fixed some layout issues. TODO: fix clicking when sonifying and make sure quick links work. Implement country drop down menu

--- a/index.html
+++ b/index.html
@@ -35,15 +35,14 @@ window.onload = function() {
   <p align='center'> by Giovanni Fusco @ The Smith-Kettlewell Eye Research Institute </p>
 </header>
 <p id='update_timestamp'></p>
-<nav>
+<nav class='navbar'>
 <br>
-<a href="#world_summary" aria-label="jump to World COVID statistics">World Stats</a>
-<a href="#US_summary" aria-label="jump to USA COVID statistics">USA </a>
-<a href="#IT_summary" aria-label="jump to Italy COVID statistics">Italy</a>
-<a href="#JP_summary" aria-label="jump to Japan COVID statistics">Japan</a>
-<a href="#CN_summary" aria-label="jump to China COVID statistics">China</a>
-<a href="#KR_summary" aria-label="jump to South Korea COVID statistics">South Korea</a>
-
+<a href="#world_summary" aria-label="jump to">Main Content</a>
+<a href="#US" aria-label="jump to USA">USA </a>
+<a href="#IT" aria-label="jump to Italy">Italy</a>
+<a href="#JP" aria-label="jump to Japan">Japan</a>
+<a href="#CN" aria-label="jump to China">China</a>
+<a href="#KR" aria-label="jump to South Korea">South Korea</a>
 <br><br>
 <!-- <form name="country_form" id="country_form" action="/view">
     <label for="country_select">Jump to Country:</label>
