removed authorship from the top of the page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ function handle_selection(country_code){
   <h1>A11Y COVID-19</h1>
   <p><a class='skip-main' href="#main_article">Main Content</a></p>
   <p align='center'> Accessible Pandemic Data Bulletin </p>
-  <p align='center'> by Giovanni Fusco @ The Smith-Kettlewell Eye Research Institute </p>
+  <!-- <p align='center'> by Giovanni Fusco @ The Smith-Kettlewell Eye Research Institute </p> -->
 </header>
 <p id='update_timestamp'></p>
 
