fixed some bugs, improved text for descriptions and brief, added more countries to the home page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@ function handle_selection(country_code){
   <a href="#" onClick="handle_selection('CN')" title="jump to">China</a>
   <a href="#" onClick="handle_selection('KR')" title="jump to">South Korea</a>
   <a href="#" onClick="handle_selection('CA')" title="jump to">Canada</a>
-  <a href="#" onClick="handle_selection('AU')" title="jump to">Australia</a>
+  <a href="#" onClick="handle_selection('MX')" title="jump to">Mexico</a>
+  <a href="#" onClick="handle_selection('IN')" title="jump to">India</a>
+  <a href="#" onClick="handle_selection('GB')" title="jump to">UK</a>
+  <a href="#" onClick="handle_selection('PE')" title="jump to">Peru</a>
+  <a href="#" onClick="handle_selection('BR')" title="jump to">Brazil</a>
+  
   <div align='right'>
   <form name="country_form" id="country_form" onSubmit="return handle_selection()">
       <label for="country_select">Jump to Country:</label>
