added list of world countries

--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@ function handle_selection(country_code, state_name){
       country_code = document.country_form['country_select'].value;
       state_name = '';
   }
-  console.log('STATE: ' + state_name)
   document.getElementById('main_article').innerHTML = '';
-  create_summary_section(country_code, state_name, 'main_article');
+  
+  if (country_code.localeCompare('ALL') == 0)
+    list_all_countries('main_article')
+  else
+    create_summary_section(country_code, state_name, 'main_article');
+
   return false;
 }
 </script>
@@ -51,18 +55,9 @@ function handle_selection(country_code, state_name){
 <nav>
   <a href="#" onClick="handle_selection('US', '')" title="jump to">USA</a>
   <a href="#" onClick="handle_selection('IT', '')" title="jump to">Italy</a>
-  <a href="#" onClick="handle_selection('FR', '')" title="jump to">France</a>
-  <a href="#" onClick="handle_selection('JP', '')" title="jump to">Japan</a>
-  <a href="#" onClick="handle_selection('CN', '')" title="jump to">China</a>
-  <a href="#" onClick="handle_selection('KR', '')" title="jump to">South Korea</a>
-  <a href="#" onClick="handle_selection('CA', '')" title="jump to">Canada</a>
-  <a href="#" onClick="handle_selection('MX', '')" title="jump to">Mexico</a>
-  <a href="#" onClick="handle_selection('IN', '')" title="jump to">India</a>
-  <a href="#" onClick="handle_selection('GB', '')" title="jump to">UK</a>
-  <a href="#" onClick="handle_selection('PE', '')" title="jump to">Peru</a>
-  <a href="#" onClick="handle_selection('BR', '')" title="jump to">Brazil</a>
-  <a href="#" onClick="handle_selection('IR', '')" title="jump to">Iran</a>
   <a href="#" onClick="handle_selection('NZ', '')" title="jump to">New Zealand</a>
+  <a href="#" onClick="handle_selection('SE', '')" title="jump to">Sweden</a>
+  <a href="#" onClick="handle_selection('ALL', '')" title="jump to">All Countries</a>
   
   <div align='right'>
   <form name="country_form" id="country_form" onSubmit="return handle_selection()">
