main features are completed. Need to add about page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ function handle_selection(country_code, state_name){
   <a href="#" onClick="handle_selection('IT', '')" title="jump to">Italy</a>
   <a href="#" onClick="handle_selection('NZ', '')" title="jump to">New Zealand</a>
   <a href="#" onClick="handle_selection('SE', '')" title="jump to">Sweden</a>
-  <a href="#" onClick="handle_selection('ALL', '')" title="jump to">All Countries</a>
+  <a href="#" onClick="handle_selection('CN', '')" title="jump to">China</a>
+  <a href="#" onClick="handle_selection('World', '')" title="jump to">All Countries</a>
   
   <div align='right'>
   <form name="country_form" id="country_form" onSubmit="return handle_selection()">
