--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ function handle_selection(country_code, state_name){
   
   if (country_code.localeCompare('ALL') == 0)
     list_all_countries('main_article')
+  else if (country_code.localeCompare('About') == 0)
+    create_about_page('main_article');
   else
     create_summary_section(country_code, state_name, 'main_article');
 
@@ -53,6 +55,7 @@ function handle_selection(country_code, state_name){
 
 
 <nav>
+  <a href="#" onClick="handle_selection('About', '')" title="jump to">About</a>
   <a href="#" onClick="handle_selection('US', '')" title="jump to">USA</a>
   <a href="#" onClick="handle_selection('IT', '')" title="jump to">Italy</a>
   <a href="#" onClick="handle_selection('NZ', '')" title="jump to">New Zealand</a>
