changed about page, funding ack, fixed tabs and minor errors in text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="./scripts/covid_utils.js"></script>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>A11Y COVID-19</title>
+    <title>A11Y COVID-19</title>
 </head>
 
 <body>
@@ -93,10 +93,9 @@ function handle_selection(country_code, state_name){
   <small>
     <hr>
     
-    <p align='center'> Data sourced from Johns Hopkins University @ https://github.com/CSSEGISandData/COVID-19</p>
-    <p align='center'> This project is funded by the Rehabilitation Engineering Research Center: Develop and Evaluate Rehabilitation 
-      Technology and Methods for Individuals with Low Vision, Blindness and Multiple Disabilities, Grant Number 90RE5024-01-00  </p>
-      <p align='center'>by Giovanni Fusco © The Smith-Kettlewell Eye Research Institute, April 2020</p>
+    <p align='center'>by Giovanni Fusco © The Smith-Kettlewell Eye Research Institute, April 2020</p>
+    <p align='center'> This project was supported by grant number 90RE5024-01-00 from the U.S. Administration for Community Living, Department of Health and Human Services, Washington, D.C. 20201. </p>
+    <p align='center'> Data sourced from Johns Hopkins University @ https://github.com/CSSEGISandData/COVID-19</p>  
 </small>
 </footer>
 </body>
