added link to CDC guidelines

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ function handle_selection(country_code, state_name){
   <a href="#" onClick="handle_selection('SE', '')" title="jump to">Sweden</a>
   <a href="#" onClick="handle_selection('CN', '')" title="jump to">China</a>
   <a href="#" onClick="handle_selection('World', '')" title="jump to">All Countries</a>
+  <a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html" target="_blank">Official CDC guidelines</a>
   
   <div align='right'>
   <form name="country_form" id="country_form" onSubmit="return handle_selection()">
