added NIDILRR to funding text

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ function handle_selection(country_code, state_name){
     <hr>
     
     <p align='center'>by Giovanni Fusco © The Smith-Kettlewell Eye Research Institute, April 2020</p>
-    <p align='center'> This project was supported by grant number 90RE5024-01-00 from the U.S. Administration for Community Living, Department of Health and Human Services, Washington, D.C. 20201. </p>
+    <p align='center'> This project was supported by NIDILRR grant number 90RE5024-01-00 from the U.S. Administration for Community Living, Department of Health and Human Services, Washington, D.C. 20201. </p>
     <p align='center'> Data sourced from Johns Hopkins University @ https://github.com/CSSEGISandData/COVID-19</p>  
 </small>
 </footer>
