fixed bug with quick country navigation menu

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ function handle_selection(country_code, state_name, county){
   if (country_code == undefined){
       country_code = document.country_form['country_select'].value;
       state_name = '';
+      county = '';
   }
   document.getElementById('main_article').innerHTML = '';
   
