--- a/index.html
+++ b/index.html
@@ -50,30 +50,31 @@ function handle_selection(country_code, state_name, county){
 </script>
 
 <header>
-  <h1>Accessible COVID-19</h1>
+  <h1>Accessible COVID-19 Pandemic Data</h1>
   <ul>
     <li class='no-dot'>
     <p><a class='skip-main' href="#main_article">Main Content</a></p></li>
     <li class='no-dot'>
-    <p align='center'>Sonified Pandemic Data Bulletin </p></li>
+    <p align='center'>Sonified Pandemic Data Bulletin</p></li>
     <li class='no-dot'>
     <p align='center'>by Giovanni Fusco © The Smith-Kettlewell Eye Research Institute, April 2020</p>
     </li>
   </ul>
-  
 </header>
 
 
 <nav>
-  <a href="#" onClick="handle_selection('Feedback', '', '')" title="jump to">Leave your Feedback </a>
-  <a href="#" onClick="handle_selection('About', '', '')" title="jump to">About</a>
-  <a href="#" onClick="handle_selection('US', '', '')" title="jump to">USA</a>
-  <a href="#" onClick="handle_selection('IT', '', '')" title="jump to">Italy</a>
-  <a href="#" onClick="handle_selection('NZ', '', '')" title="jump to">New Zealand</a>
-  <a href="#" onClick="handle_selection('SE', '', '')" title="jump to">Sweden</a>
-  <a href="#" onClick="handle_selection('CN', '', '')" title="jump to">China</a>
-  <a href="#" onClick="handle_selection('World', '', '')" title="jump to">All Countries</a>
-  <a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html" target="_blank">CDC Safety Guidelines</a>
+    <ul class="breadcrumb" >
+        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('Feedback', '', '')" title="jump to">Contacts</a></li>
+        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('About', '', '')" title="jump to">About</a></li>
+        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('US', '', '')" title="jump to">USA</a></li>
+        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('IT', '', '')" title="jump to">Italy</a></li>
+        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('NZ', '', '')" title="jump to">New Zealand</a></li>
+        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('SE', '', '')" title="jump to">Sweden</a></li>
+        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('CN', '', '')" title="jump to">China</a></li>
+        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('World', '', '')" title="jump to">All Countries</a></li>
+        <li class="breadcrumb-item"><a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html" target="_blank">CDC Safety Guidelines</a></li>
+    </ul>
   
   <div align='right'>
   <form name="country_form" id="country_form" onSubmit="return handle_selection()">
@@ -86,20 +87,30 @@ function handle_selection(country_code, state_name, county){
   </div>
 </nav>
 
-<main id="main" role="main">
-<article id='main_article'>
-  <p id='update_timestamp'></p>
-  <section id="progress_section">
-     <!-- progress bar -->
-      <div id="fetching_progress_section">
-        <label for="fetching_progress">Fetching data, please wait... If this takes too long, try refreshing the page.</label>
-        <progress id="fetching_progress" max="1" value="0" style="width: 50%"></progress>
+    <div class="container">
+      <div class="row" >
+        <div class="col-md-12">
+
+            <main id="main" role="main">
+                <article id='main_article'>
+                  <p id='update_timestamp'></p>
+                  <section id="progress_section">
+                     <!-- progress bar -->
+                      <div id="fetching_progress_section">
+                        <label for="fetching_progress">Fetching data, please wait... If this takes too long, try refreshing the page.</label>
+                        <progress id="fetching_progress" max="1" value="0" style="width: 50%"></progress>
+                      </div>
+                  </section>
+                </article>
+                </main>
+
+
+        </div>
       </div>
-  </section>
+    </div>
 
-</article>
 
-</main>
+
 
 <footer>
   <small>
