--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="eng">
 <meta charset="UTF-8">
-<style>
-
-</style>
 
 <head>
     <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101267620);</script>
-    <script async src="//static.getclicky.com/js"></script>
+    <!--<script async src="//static.getclicky.com/js"></script> -->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://d3js.org/d3-dsv.v1.min.js"></script>
+    <!-- <script src="https://d3js.org/d3-dsv.v1.min.js"></script> -->
+    <script src="https://d3js.org/d3.v6.min.js"></script> <!-- see changelog -->
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="./scripts/covid_utils.js"></script>
+
     <link rel="stylesheet" href="style.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="This website provides accessible sonified COVID-19 pandemic data" />
     <title>Accessible COVID-19 data</title>
@@ -24,29 +27,29 @@
 <body>
   
 <script type="text/javascript">
-window.onload = function() {
-   fetch_and_prepare_data_JHU();
-}
+    window.onload = function() {
+       fetch_and_prepare_data_JHU();
+    }
 
-function handle_selection(country_code, state_name, county){
-  if (country_code == undefined){
-      country_code = document.country_form['country_select'].value;
-      state_name = '';
-      county = '';
-  }
-  document.getElementById('main_article').innerHTML = '';
+    function handle_selection(country_code, state_name, county){
+      if (country_code == undefined){
+          country_code = document.country_form['country_select'].value;
+          state_name = '';
+          county = '';
+      }
+      document.getElementById('main_article').innerHTML = '';
   
-  if (country_code.localeCompare('ALL') == 0)
-    list_all_countries('main_article');
-  else if (country_code.localeCompare('About') == 0)
-    create_about_page('main_article');
-  else if (country_code.localeCompare('Feedback') == 0)
-    create_feedback_page('main_article');
-  else
-    create_article(country_code, state_name, county, 'main_article');
+      if (country_code.localeCompare('ALL') == 0)
+        list_all_countries('main_article');
+      else if (country_code.localeCompare('About') == 0)
+        create_about_page('main_article');
+      else if (country_code.localeCompare('Feedback') == 0)
+        create_feedback_page('main_article');
+      else
+        create_article(country_code, state_name, county, 'main_article');
 
-  return false;
-}
+      return false;
+    }
 </script>
 
 <header>
@@ -64,23 +67,23 @@ function handle_selection(country_code, state_name, county){
 
 
 <nav>
-    <ul class="breadcrumb" >
-        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('Feedback', '', '')" title="jump to">Contacts</a></li>
-        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('About', '', '')" title="jump to">About</a></li>
-        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('US', '', '')" title="jump to">USA</a></li>
-        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('IT', '', '')" title="jump to">Italy</a></li>
-        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('NZ', '', '')" title="jump to">New Zealand</a></li>
-        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('SE', '', '')" title="jump to">Sweden</a></li>
-        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('CN', '', '')" title="jump to">China</a></li>
-        <li class="breadcrumb-item"><a href="#" onClick="handle_selection('World', '', '')" title="jump to">All Countries</a></li>
-        <li class="breadcrumb-item"><a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html" target="_blank">CDC Safety Guidelines</a></li>
-    </ul>
-  
+            <ul class="breadcrumb justify-content-center">
+                <li class="breadcrumb-item"><a href="#" onClick="handle_selection('Feedback', '', '')" title="jump to contacs">Contacts</a></li>
+                <li class="breadcrumb-item"><a href="#" onClick="handle_selection('About', '', '')" title="jump to">About</a></li>
+                <li class="breadcrumb-item"><a href="#" onClick="handle_selection('US', '', '')" title="jump to">USA</a></li>
+                <li class="breadcrumb-item"><a href="#" onClick="handle_selection('IT', '', '')" title="jump to">Italy</a></li>
+                <li class="breadcrumb-item"><a href="#" onClick="handle_selection('NZ', '', '')" title="jump to">New Zealand</a></li>
+                <li class="breadcrumb-item"><a href="#" onClick="handle_selection('SE', '', '')" title="jump to">Sweden</a></li>
+                <li class="breadcrumb-item"><a href="#" onClick="handle_selection('CN', '', '')" title="jump to">China</a></li>
+                <li class="breadcrumb-item"><a href="#" onClick="handle_selection('World', '', '')" title="jump to">All Countries</a></li>
+                <li class="breadcrumb-item"><a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html" target="_blank">CDC Safety Guidelines</a></li>
+            </ul>
+
   <div align='right'>
   <form name="country_form" id="country_form" onSubmit="return handle_selection()">
-      <label for="country_select">Jump to Country:</label>
+      <label for="country_select"><!--Jump to Country:--></label>
       <select id="country_select" aria-controls="country" name="country_select">
-        <option value="">Select a country&hellip;</option>
+          <option value="">Select a country&hellip;</option>
       </select>
       <input type="submit" value="Go">
     </form>
@@ -93,24 +96,20 @@ function handle_selection(country_code, state_name, county){
 
             <main id="main" role="main">
                 <article id='main_article'>
-                  <p id='update_timestamp'></p>
-                  <section id="progress_section">
-                     <!-- progress bar -->
-                      <div id="fetching_progress_section">
-                        <label for="fetching_progress">Fetching data, please wait... If this takes too long, try refreshing the page.</label>
-                        <progress id="fetching_progress" max="1" value="0" style="width: 50%"></progress>
-                      </div>
-                  </section>
+                      <p id='update_timestamp'></p>
+                          <section id="progress_section">
+                             <!-- progress bar -->
+                                  <div id="fetching_progress_section" align='center'>
+                                      <label for="fetching_progress">Fetching data, please wait... If this takes too long, try refreshing the page.</label>
+                                      <progress id="fetching_progress" max="1" value="0" style="width: 50%;"></progress>
+                                  </div>
+                          </section>
                 </article>
                 </main>
-
 
         </div>
       </div>
     </div>
-
-
-
 
 <footer>
   <small>
